display replacing disable

--- a/server/http/deckEditor.html
+++ b/server/http/deckEditor.html
@@ -52,7 +52,7 @@
                             <option value="2">Spells</option>
                             <option value="4">Traps</option>
                         </select>
-                        <select class="monsterCardSelect" disabled>
+                        <select class="monsterCardSelect" style="display:none">
                             <option value>Specify a monster type</option>
                             <option value="16">Normal</option>
                             <option value="32">Effect</option>
@@ -61,7 +61,7 @@
                             <option value="4096">Tuner</option>
                             <option value="4194336">Toon</option>
                         </select>
-                        <select class="monsterTypeSelect" disabled>
+                        <select class="monsterTypeSelect" style="display:none">
                             <option value>Specify a monster type</option>
                             <option value="64">Fusion</option>
                             <option value="128">Ritual</option>
@@ -69,7 +69,7 @@
                             <option value="8388608">Xyz</option>
                             <option value="16777216">Pendulum</option>
                         </select>
-                        <select class="spellSelect" disabled>
+                        <select class="spellSelect" style="display:none">
                             <option value="2">Specify a card type</option>
                             <option value="2">Normal</option>
                             <option value="65538">Quick-Play</option>
@@ -78,7 +78,7 @@
                             <option value="262146">Equip</option>
                             <option value="524290">Field</option>
                         </select>
-                        <select class="trapSelect" disabled>
+                        <select class="trapSelect" style="display:none">
                             <option value="4">Specify a card type</option>
                             <option value="4">Normal</option>
                             <option value="131076">Continuous</option>
@@ -87,7 +87,7 @@
                     </label>
                     <br />
                     <label for="attributeSelect">Attribute:
-                        <select class="attributeSelect" data-input-attribute disabled>
+                        <select class="attributeSelect" data-input-attribute style="display:none">
                             <option value="">Specify an attribute</option>
                             <option value="1">EARTH</option>
                             <option value="2">WATER</option>
@@ -100,7 +100,7 @@
                     </label>
                     <br />
                     <label for="raceSelect">Type:
-                        <select class="raceSelect" data-input-race disabled>
+                        <select class="raceSelect" data-input-race style="display:none">
                             <option value="">Specify a Monster type</option>
                             <option value="1">Warrior</option>
                             <option value="2">Spellcaster</option>
