too much lag, half assed commit

--- a/server/http/deckEditor.html
+++ b/server/http/deckEditor.html
@@ -87,7 +87,7 @@
                     </label>
                     <br />
                     <label for="attributeSelect">Attribute:
-                        <select class="attributeSelect" data-input-attribute style="display:none">
+                        <select class="attributeSelect" data-input-attribute disabled>
                             <option value="">Specify an attribute</option>
                             <option value="1">EARTH</option>
                             <option value="2">WATER</option>
@@ -100,7 +100,7 @@
                     </label>
                     <br />
                     <label for="raceSelect">Type:
-                        <select class="raceSelect" data-input-race style="display:none">
+                        <select class="raceSelect" data-input-race disabled>
                             <option value="">Specify a Monster type</option>
                             <option value="1">Warrior</option>
                             <option value="2">Spellcaster</option>
