--- a/server/http/deckEditor.html
+++ b/server/http/deckEditor.html
@@ -53,7 +53,7 @@
                             <option value="4">Traps</option>
                         </select>
                         <select class="monsterCardSelect" style="display:none">
-                            <option value>Specify a monster type</option>
+                            <option value>Type</option>
                             <option value="16">Normal</option>
                             <option value="32">Effect</option>
                             <option value="544">Spirit</option>
@@ -62,7 +62,7 @@
                             <option value="4194336">Toon</option>
                         </select>
                         <select class="monsterTypeSelect" style="display:none">
-                            <option value>Specify a monster type</option>
+                            <option value>Type</option>
                             <option value="64">Fusion</option>
                             <option value="128">Ritual</option>
                             <option value="8192">Synchro</option>
@@ -70,7 +70,7 @@
                             <option value="16777216">Pendulum</option>
                         </select>
                         <select class="spellSelect" style="display:none">
-                            <option value="2">Specify a card type</option>
+                            <option value="2">Type</option>
                             <option value="2">Normal</option>
                             <option value="65538">Quick-Play</option>
                             <option value="131074">Continuous</option>
@@ -79,7 +79,7 @@
                             <option value="524290">Field</option>
                         </select>
                         <select class="trapSelect" style="display:none">
-                            <option value="4">Specify a card type</option>
+                            <option value="4">Type</option>
                             <option value="4">Normal</option>
                             <option value="131076">Continuous</option>
                             <option value="1048580">Counter</option>
