--- a/server/http/index.html
+++ b/server/http/index.html
@@ -243,7 +243,7 @@
                 <div data-translation-host class="button" id="creategameok" onclick='setHostSettings();'>Host</div>
 
             </div>
-            <div style="width:728px; height:90px; margin:0 auto;">
+            <div style="width:728px; height:90px; margin:0 -140px;">
                 <SCRIPT language="Javascript">
                     var cpmstar_rnd = Math.round(Math.random() * 999999);
                     var cpmstar_pid = 44429;
