--- a/server/http/index.html
+++ b/server/http/index.html
@@ -131,6 +131,7 @@
                 <span onclick="translateLang('de')">Deutsch</span>
                 <span onclick="translateLang('fr')">Français(France)</span>
                 <span onclick="translateLang('fr-ca')">Français(Québec)</span>
+                <span onclick="translateLang('it')">Italiano</span>
                 <span onclick="translateLang('pt')">Português</span>
                 <span onclick="translateLang('nl')">Nederlands</span>
                 <span onclick="translateLang('jp')">日本語</span>
@@ -435,6 +436,7 @@
                             <option value="de">Deutsch</option>
                             <option value="fr">Français(France)</option>
                             <option value="fr-ca">Français(Québec)</option>
+                            <option value="it">Italiano</option>
                             <option value="pt">Português</option>
                             <option value="nl">Nederlands</option>
                             <option value="tr">Türkçe</option>
