now works for other browsers

--- a/server/http/deckEditor.html
+++ b/server/http/deckEditor.html
@@ -34,7 +34,7 @@
                 <button class="saveDeck">Save</button>
                 <br />
                 <button class="saveDeckAs">Save as</button>
-                <label for="decknameInput">Name Input:
+                <label for="decknameInput">Add Name:
                    <input type="text" class="decknameInput">
                 </label>
                 <button class="deleteDeck">Delete</button>
