--- a/server/http/index.html
+++ b/server/http/index.html
@@ -20,6 +20,7 @@
     <link href='https://fonts.googleapis.com/css?family=Alegreya+Sans+SC:100,400,800,900' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="css/main.css">
     <link rel="stylesheet" href="css/animation.css">
+    <link rel="stylesheet" type="text/css" href="css/deck-edit.css">
 
 
 
