--- a/server/http/deckEditor.html
+++ b/server/http/deckEditor.html
@@ -3,7 +3,7 @@
 <head>
     <title>Salvation Pro | Deck Editor</title>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-    <link rel="stylesheet" type="text/css" href="css/deck-edit.css">
+    <link rel="stylesheet" type="text/css" href="css/deck-edit-browser.css">
     <script src="js/jquery-1.11.0.min.js"></script>
     <script src="js/jquery-ui.min.js"></script>
     <script src="js/ConfigParser.js"></script>
