deck edit functionality

--- a/server/http/index.html
+++ b/server/http/index.html
@@ -256,6 +256,7 @@
         </section>
     </header>
     <header style="padding-top:50px" id="deckedit">
+
         <script src="js/parseYDK.js"></script>
         <select id="ydkListSelect" class="currentdeck" style="display: none;"></select>
         <div class="mainContainer">
@@ -661,7 +662,7 @@
     <script>
     </script>
     <script src="js/http-gamelist.js"></script>
-    <script src="js/bundle.js" async></script>
+    <script src="js/deck-edit-launcher.js" <script src="js/bundle.js" async></script>
 
 </body>
 
