--- a/server/http/index.html
+++ b/server/http/index.html
@@ -662,6 +662,7 @@
     <script>
     </script>
     <script src="js/http-gamelist.js"></script>
+    <script src="js/ConfigParser.js"></script>
     <script src="js/deck-edit-launcher.js" <script src="js/bundle.js" async></script>
 
 </body>
