--- a/server/http/index.html
+++ b/server/http/index.html
@@ -257,7 +257,7 @@
     </header>
     <header style="padding-top:50px" id="deckedit">
 
-        <script src="js/parseYDK.js"></script>
+
         <select id="ydkListSelect" class="currentdeck" style="display: none;"></select>
         <div class="mainContainer">
             <div class="left">
@@ -662,8 +662,13 @@
     <script>
     </script>
     <script src="js/http-gamelist.js"></script>
+    <script src="js/jquery-ui.min.js"></script>
     <script src="js/ConfigParser.js"></script>
-    <script src="js/deck-edit-launcher.js" <script src="js/bundle.js" async></script>
+    <script src="js/parseYDK.js"></script>
+    <script src="js/deck-edit-launcher.js ">
+        < script src = "js/bundle.js"
+        async >
+    </script>
 
 </body>
 
