bit more control

--- a/server/http/index.html
+++ b/server/http/index.html
@@ -269,17 +269,17 @@
             </div>
             <div class="searchBar">
                 <div class="searchLeft">
-                    <label for="banlistSelect">Ban List:
+                    <label for="banlistSelect"><span>Ban List:</span>
                         <select class="banlistSelect"></select>
                     </label>
                     <br />
-                    <label for="deckSelect">Deck:
+                    <label for="deckSelect"><span>Deck:</span>
                         <select class="deckSelect"></select>
                     </label>
                     <button class="saveDeck">Save</button>
                     <br />
                     <button class="saveDeckAs">Save as</button>
-                    <label for="decknameInput">Add Name:
+                    <label for="decknameInput"><span>Add Name:</span>
                         <input type="text" class="decknameInput">
                     </label>
                     <button class="deleteDeck">Delete</button>
@@ -290,7 +290,7 @@
                 </div>
                 <div class="searchRight">
                     <div class="searchBlock">
-                        <label for="typeSelect">Category:
+                        <label for="typeSelect"><span>Category:</span>
                             <select class="typeSelect">
                                 <option value="5">All</option>
                                 <option value="1">Monster</option>
@@ -331,7 +331,7 @@
                             </select>
                         </label>
                         <br />
-                        <label for="attributeSelect">Attribute:
+                        <label for="attributeSelect"><span>Attribute:</span>
                             <select class="attributeSelect" data-input-attribute disabled>
                                 <option value="">Specify an attribute</option>
                                 <option value="1">EARTH</option>
@@ -344,7 +344,7 @@
                             </select>
                         </label>
                         <br />
-                        <label for="raceSelect">Type:
+                        <label for="raceSelect"><span>Type:</span>
                             <select class="raceSelect" data-input-race disabled>
                                 <option value="">Specify a Monster type</option>
                                 <option value="1">Warrior</option>
@@ -374,21 +374,21 @@
                             </select>
                         </label>
                         <br />
-                        <label for="setcodeSelect">Archetype:
+                        <label for="setcodeSelect"><span>Archetype:</span>
                             <select class="setcodeSelect" data-input-setcode>
                                 <option value="">Specify a card archetype</option>
                             </select>
                         </label>
                         <br />
-                        <label for="levelInput">Level/Rank:
+                        <label for="levelInput"><span>Level/Rank:</span>
                             <input class="levelInput" type="number" min="1" max="12" data-input-level>
                         </label>
-                        <label for="scaleInput">Scale:
+                        <label for="scaleInput"><span>Scale:</span>
                             <input class="scaleInput" type="number" min="1" max="12" data-input-scale>
                         </label>
                     </div>
                     <div class="searchBlock">
-                        <label for="forbiddenLimitedSelect">Limit:
+                        <label for="forbiddenLimitedSelect"><span>Limit:</span>
                             <select class="forbiddenLimitedSelect" data-input-forbiddenlimited>
                                 <option value="4">All</option>
                                 <option value="0">Forbidden</option>
@@ -398,19 +398,19 @@
                             </select>
                         </label>
                         <br />
-                        <label for="atkInput">ATK:
+                        <label for="atkInput"><span>ATK:</span>
                             <input class="atkInput" type="number" min="0" data-input-atk>
                         </label>
                         <br />
-                        <label for="defInput">DEF:
+                        <label for="defInput"><span>DEF:</span>
                             <input class="defInput" type="number" min="0" data-input-def>
                         </label>
                         <br />
-                        <label for="nameInput">Name:
+                        <label for="nameInput"><span>Name:</span>
                             <input class="nameInput" type="text" data-input-name>
                         </label>
                         <br />
-                        <label for="descInput">Description
+                        <label for="descInput"><span>Description</span>
                             <input class="descInput" type="text" data-input-desc>
                         </label>
                         <br />
