--- a/server/http/index.html
+++ b/server/http/index.html
@@ -665,10 +665,8 @@
     <script src="js/jquery-ui.min.js"></script>
     <script src="js/ConfigParser.js"></script>
     <script src="js/parseYDK.js"></script>
-    <script src="js/deck-edit-launcher.js ">
-        < script src = "js/bundle.js"
-        async >
-    </script>
+    <script src="js/deck-edit-launcher.js"></script>
+    <script src="js/bundle.js" async></script>
 
 </body>
 
