--- a/server/http/index.html
+++ b/server/http/index.html
@@ -658,7 +658,7 @@
         ga('require', 'displayfeatures');
         ga('send', 'pageview');
     </script>
-    <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js" async></script>
+    <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
     <script>
     </script>
     <script src="js/http-gamelist.js"></script>
