--- a/server/http/index.html
+++ b/server/http/index.html
@@ -275,18 +275,23 @@
                     <br />
                     <label for="deckSelect"><span>Deck:</span>
                         <select class="deckSelect"></select>
+                        <button class="saveDeck">Save</button>
                     </label>
-                    <button class="saveDeck">Save</button>
+
                     <br />
-                    <button class="saveDeckAs">Save as</button>
-                    <label for="decknameInput"><span>Add Name:</span>
+
+                    <label for="decknameInput">
+                        <button class="deleteDeck">Delete</button>
                         <input type="text" class="decknameInput">
+                        <button class="saveDeckAs">Save as</button>
                     </label>
-                    <button class="deleteDeck">Delete</button>
+
                     <br />
-                    <button class="shuffleDeck">Shuffle</button>
-                    <button class="sortDeck">Sort</button>
-                    <button class="clearDeck">Clear</button>
+                    <label for="deckbuttons">
+                        <button class="shuffleDeck">Shuffle</button>
+                        <button class="sortDeck">Sort</button>
+                        <button class="clearDeck">Clear</button>
+                    </label>
                 </div>
                 <div class="searchRight">
                     <div class="searchBlock">
