--- a/server/http/index.html
+++ b/server/http/index.html
@@ -457,6 +457,8 @@
     <header style="padding-top:50px" id="ranking">
         <div class="rankingcolumn">
             <h2>Profile</h2>
+            <img id="avatar" />
+            <label id="profileusername"></label>
             <h3>Achievements</h3>
         </div>
         <div class="rankingcolumn">
