--- a/server/http/index.html
+++ b/server/http/index.html
@@ -454,11 +454,12 @@
         </audio>
 -->
     </header>
-    <header style="padding-top:50px" id="ranking">
+    <header style="padding-top:50px; color:white" id="ranking">
         <div class="rankingcolumn">
             <h2>Profile</h2>
             <img id="avatar" />
             <label id="profileusername"></label>
+            <label id="profilepoints"></label>
             <h3>Achievements</h3>
         </div>
         <div class="rankingcolumn">
