--- a/server/http/index.html
+++ b/server/http/index.html
@@ -461,6 +461,40 @@
             <label id="profileusername"></label>
             <label id="profilepoints"></label>
             <h3>Achievements</h3>
+            <label>Defeated AccessDenied in a Shadow Duel: <span>Locked</span>
+            </label>
+            <label>Summoned the Winged Dragon of Ra to the Server: <span>Locked</span>
+            </label>
+            <label>Git Gone: <span>Locked</span>
+            </label>
+            <label>Survive the gaze of the demon: <span>Locked</span>
+            </label>
+            <label>Community Leader: <span>Locked</span>
+            </label>
+            <label>JADGE!: <span>Locked</span>
+            </label>
+            <label>ARG Wedding Shot: <span>Locked</span>
+            </label>
+            <label>Wink for me Magi Magin: <span>Locked</span>
+            </label>
+            <label>Mindf*** a Dev: <span>Locked</span>
+            </label>
+            <label>Summon the demon: <span>Locked</span>
+            </label>
+            <label>Score 1200 Grandmaster: <span>Locked</span>
+            </label>
+            <label>Score 1024 Professional: <span>Locked</span>
+            </label>
+            <label>Score 128 Oblisk Blue: <span>Locked</span>
+            </label>
+            <label>Score 32 Ra Yellow: <span>Locked</span>
+            </label>
+            <label>Score 16 Slifer Red: <span>Locked</span>
+            </label>
+            <label>Score 2 With Intentions: <span>Locked</span>
+            </label>
+
+
         </div>
         <div class="rankingcolumn">
             <h2>High Scores</h2>
