--- a/server/http/index.html
+++ b/server/http/index.html
@@ -462,37 +462,37 @@
             <label id="profilepoints"></label>
             <h3>Achievements</h3>
             <div id="achievements">
-                <label>Defeated AccessDenied in a Shadow Duel: <span>Locked</span>
+                <label> <span>Locked</span>Defeated AccessDenied in a Shadow Duel
                 </label>
-                <label>Summoned the Winged Dragon of Ra to the Server: <span>Locked</span>
+                <label> <span>Locked</span>Summoned the Winged Dragon of Ra to the Server
                 </label>
-                <label>Git Gone: <span>Locked</span>
+                <label> <span>Locked</span>Git Gone
                 </label>
-                <label>Survive the gaze of the demon: <span>Locked</span>
+                <label> <span>Locked</span>Survive the gaze of the demon
                 </label>
-                <label>Community Leader: <span>Locked</span>
+                <label> <span>Locked</span>Community Leader
                 </label>
-                <label>JADGE!: <span>Locked</span>
+                <label> <span>Locked</span>JADGE!
                 </label>
-                <label>ARG Wedding Shot: <span>Locked</span>
+                <label> <span>Locked</span>ARG Wedding Shot
                 </label>
-                <label>Wink for me Magi Magin: <span>Locked</span>
+                <label> <span>Locked</span>Wink for me Magi Magi Gal
                 </label>
-                <label>Mindf*** a Dev: <span>Locked</span>
+                <label> <span>Locked</span>Mindf*** a Dev
                 </label>
-                <label>Summon the demon: <span>Locked</span>
+                <label> <span>Locked</span>Summon the demon
                 </label>
-                <label>Score 1200 Grandmaster: <span>Locked</span>
+                <label> <span>Locked</span>Score 1200 Grandmaster
                 </label>
-                <label>Score 1024 Professional: <span>Locked</span>
+                <label> <span>Locked</span>Score 1024 Professional
                 </label>
-                <label>Score 128 Oblisk Blue: <span>Locked</span>
+                <label> <span>Locked</span>Score 128 Oblisk Blue
                 </label>
-                <label>Score 32 Ra Yellow: <span>Locked</span>
+                <label> <span>Locked</span>Score 32 Ra Yellow
                 </label>
-                <label>Score 16 Slifer Red: <span>Locked</span>
+                <label> <span>Locked</span>Score 16 Slifer Red
                 </label>
-                <label>Score 2 With Intentions: <span>Locked</span>
+                <label>Score 2 With Intentions
                 </label>
 
             </div>
