--- a/server/http/index.html
+++ b/server/http/index.html
@@ -457,14 +457,16 @@
     <header style="padding-top:50px; color:white" id="ranking">
         <div class="rankingcolumn">
             <h2>Profile</h2>
-            <img id="avatar" />
-            <label id="profileusername"></label>
-            <label id="profilepoints"></label>
-            <h3>Achievements</h3>
+            <div id="profileblock"> <img id="avatar" />
+                <label id="profileusername"></label>
+                <label id="profilepoints"></label>
+            </div>
+
             <div id="achievements">
-                <label> <span>Locked</span>Defeated AccessDenied in a Shadow Duel
+                <h3>Achievements</h3>
+                <label> <span>Locked</span>Defeat AccessDenied in a Shadow Duel
                 </label>
-                <label> <span>Locked</span>Summoned the Winged Dragon of Ra to the Server
+                <label> <span>Locked</span>Summon the Ra to the Server
                 </label>
                 <label> <span>Locked</span>Git Gone
                 </label>
@@ -492,7 +494,7 @@
                 </label>
                 <label> <span>Locked</span>Score 16 Slifer Red
                 </label>
-                <label>Score 2 With Intentions
+                <label><span>Locked</span>Score 2 With Intentions
                 </label>
 
             </div>
