--- a/server/http/index.html
+++ b/server/http/index.html
@@ -459,7 +459,7 @@
             <h2>Profile</h2>
             <div id="profileblock"> <img id="avatar" />
                 <label id="profileusername"></label>
-                <label id="profilepoints"></label>
+                <label id="profilepoints">Ranked Play Score :<span>Unknown</span></label>
             </div>
 
             <div id="achievements">
