Renamed "Enable Priority" to "Enable Old Rules"

--- a/server/http/index.html
+++ b/server/http/index.html
@@ -229,7 +229,7 @@
                 <br />
 
                 <h2 data-translation-additionaloptions>Additional Options</h2>
-                <label data-translation-enablepriority>Enable Priority</label>
+                <label data-translation-enablepriority>Enable Old Rules</label>
                 <input type="checkbox" id="enableprio">
                 <br />
                 <label data-translation-disablecheckdeck>Disable Check Deck</label>
