--- a/server/http/index.html
+++ b/server/http/index.html
@@ -554,7 +554,7 @@
                         <input type="checkbox" data-localhost="use_d3d" />
                         <br />
                         <label data-translation-antialiasing>Anti Aliasing</label>
-                        <input type="rang" min=0 max=32 data-localhost="antialias" />
+                        <input type="range" min=0 max=32 data-localhost="antialias" />
                         <br />
                         <label data-translation-fontsize>Font Size</label>
                         <input type="range" min="8" max="18" value="14" id="fontsize">
