--- a/server/http/deckEditor.html
+++ b/server/http/deckEditor.html
@@ -28,6 +28,17 @@
                     <select class="banlistSelect"></select>
                 </label>
                 <br />
+                <label for="databaseSelect">Database:
+                    <select class="databaseSelect">
+                        <option value="0-en-OCGTCG">OCG / TCG</option>
+                        <option value="1-Anime">Anime</option>
+                        <option value="2-MonsterLeague">Monster League</option>
+                        <option value="3-Goats">Goat Format</option>
+                        <option value="4-Newgioh">Newgioh</option>
+                        <option value="Z-CWA">Z-CWA</option>
+                    </select>
+                </label>
+                <br />
                 <label for="deckSelect">Deck:
                     <select class="deckSelect"></select>
                 </label>
