--- a/server/http/deckEditor.html
+++ b/server/http/deckEditor.html
@@ -45,7 +45,7 @@
                 <button class="saveDeck">Save</button>
                 <br />
                 <button class="saveDeckAs">Save as</button>
-                <label for="decknameInput">Add Name:
+                <label for="decknameInput">Name:
                    <input type="text" class="decknameInput">
                 </label>
                 <button class="deleteDeck">Delete</button>
