Hide deck editor, display notice instead

--- a/server/http/index.html
+++ b/server/http/index.html
@@ -256,10 +256,14 @@
         </section>
     </header>
     <header style="padding-top:50px" id="deckedit">
-
+        <div style="text-align: center; display: table-cell; vertical-align: middle;">
+            We are currently developing an online deck editor which will be available in the near future.
+            <br />
+            If after updating your launcher a new window does not open, please consult our Bug Reports Forum for help.
+        </div>
 
         <select id="ydkListSelect" class="currentdeck" style="display: none;"></select>
-        <div class="mainContainer">
+        <div class="mainContainer" style="display: none;">
             <div class="left">
                 <div class="cardImage">
                     <img class="imgContainer" src="http://ygopro.us/ygopro/pics/cover.jpg" />
