--- a/server/http/index.html
+++ b/server/http/index.html
@@ -13,7 +13,7 @@
     <link rel="shortcut icon" href="/favicon.png" />
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width">
-    <script src="//ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
+    <script src="http://ygopro.us/js/jquery-1.11.0.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/2.0.0/handlebars.min.js"></script>
     <link href="https://fonts.googleapis.com/css?family=Roboto:400,100,100italic,300,300italic,400italic,500,500italic,700,700italic,900" rel="stylesheet" type="text/css">
     <link href="https://fonts.googleapis.com/css?family=Poiret+One" rel="stylesheet" type="text/css">
@@ -258,8 +258,7 @@
     <header style="padding-top:50px" id="deckedit">
         <div style="text-align: center; margin-top: 25vh;">
             We are currently developing an online deck editor which will be available in the near future.
-            <br />
-            If after updating your launcher a new window does not open, please consult our Bug Reports Forum for help.
+            <br /> If after updating your launcher a new window does not open, please consult our Bug Reports Forum for help.
         </div>
 
         <select id="ydkListSelect" class="currentdeck" style="display: none;"></select>
