--- a/server/http/launcher.html
+++ b/server/http/launcher.html
@@ -69,7 +69,7 @@
         $.getScript(sitelocationdir[mode] + "/js/updatesystem.js");
         $.getScript(sitelocationdir[mode] + "/js/vendor/primus.js");
     </script>
-    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+    <script src="http://ygopro.us/js/jquery-1.11.0.min.js"></script>
     <script>
         $(function () {
             if (window.self != window.top) {
