having chat would be nice

--- a/server/http/index.html
+++ b/server/http/index.html
@@ -441,7 +441,7 @@
     <header style="padding-top:50px" id="chat">
 
 
-        <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/swfobject/2.2/swfobject.js"></script>
+        <script type="text/javascript" src="http://ygopro.us/js/swfobject.js"></script>
         <script type="text/javascript" src="lightIRC/config.js"></script>
         <div id="lightIRC" style="height:92%; text-align:center;">
         </div>
