Adjust JS file to be loaded

--- a/server/http/index.html
+++ b/server/http/index.html
@@ -714,7 +714,7 @@
     <script src="js/jquery-ui.min.js"></script>
     <script src="js/ConfigParser.js"></script>
     <script src="js/parseYDK.js"></script>
-    <script src="js/deck-edit.js"></script>
+    <script src="js/deck-edit-launcher.js"></script>
     </script>
 
 </body>
