--- a/server/http/launcher.html
+++ b/server/http/launcher.html
@@ -51,6 +51,8 @@
 
     <link rel="stylesheet" href="css/viewanimations.css">
     <link rel="stylesheet" href="css/z-index.css">
+
+    <script src="js/primus.js"></script>
     <script src="js/vendor/jquery-1.11.0.min.js"></script>
 </head>
 
@@ -65,7 +67,6 @@
     <script>
         var uniqueID = Math.random().toString(24).substring(7) + Math.random().toString(24).substring(7)
         $.getScript(sitelocationdir[mode] + "/js/updatesystem.js");
-        $.getScript(sitelocationdir[mode] + "/js/vendor/primus.js");
     </script>
     <script src="http://ygopro.us/js/jquery-1.11.0.min.js"></script>
     <script>
