--- a/server/http/index.html
+++ b/server/http/index.html
@@ -214,8 +214,8 @@
 
                 <label data-translation-duelmode>Duel Mode</label>
                 <select id="creategameduelmode">
-                    <option value="0" selected>Single</option>
-                    <option value="1">Match</option>
+                    <option value="0">Single</option>
+                    <option value="1" selected>Match</option>
                     <option value="2">Tag</option>
 
                 </select>
