new button, searchLeft organization

--- a/server/http/deckEditor.html
+++ b/server/http/deckEditor.html
@@ -50,6 +50,7 @@
                 </label>
                 <button class="deleteDeck">Delete</button>
                 <br />
+                <button class="newDeck">New Deck</button>
                 <button class="shuffleDeck">Shuffle</button>
                 <button class="sortDeck">Sort</button>
                 <button class="clearDeck">Clear</button>
