--- a/server/http/index.html
+++ b/server/http/index.html
@@ -299,7 +299,7 @@
                     <button class="shuffleDeck">Shuffle</button>
                     <button class="sortDeck">Sort</button>
                     <button class="clearDeck">Clear</button>
-                    <button class="newDeck">New Deck</button>
+                    <button class="newDeck">New</button>
                 </div>
                 <div class="searchRight">
                     <div class="searchBlock">
