--- a/server/http/index.html
+++ b/server/http/index.html
@@ -423,7 +423,7 @@
                             <input class="nameInput" type="text" data-input-name>
                         </label>
                         <br />
-                        <label for="descInput">Description
+                        <label for="descInput">Description:
                             <input class="descInput" type="text" data-input-desc>
                         </label>
                         <br />
