--- a/server/http/interface/index.html
+++ b/server/http/interface/index.html
@@ -47,7 +47,7 @@
         <div onclick="maxrestore();"></div>
         <div onclick="win.minimize();"></div>
         <div onclick="openConsole();" style="display: none;" id="ccc"></div>
-        <div onclick="" style="margin-right: 20px !important; background: transparent url(http://www.flash-mark.com/assets/img/icon-facebook.png) center center !important" id="ccc"></div>
+        <div onclick="gui.Shell.openItem('https://www.facebook.com/ygoprosalvationserver')" style="margin-right: 20px !important; background: transparent url(http://www.flash-mark.com/assets/img/icon-facebook.png) center center no-repeat !important; box-shadow: none;" id="ccc"></div>
     </div>
     <main style='height: 100%; background:black'>
         <div style="text-align: center;">
