--- a/server/http/index.html
+++ b/server/http/index.html
@@ -202,13 +202,14 @@
                     <option value="0" selected>2015.7.16(TCG)</option>
                     <option value="1">2015.4.1(TCG)</option>
                     <option value="2">2015.4.1(OCG)</option>
-                    <option value="3">2015.1.1(TCG)</option>
-                    <option value="4">2015.1.1(OCG)</option>
-                    <option value="23">Newgioh</option>
-                    <option value="22">Goat Format</option>
-                    <option value="19">Traditional</option>
-                    <option value="20">Unlimited</option>
-                    <option value="21">Mega-Banned</option>
+                    <option value="3">ARG</option>
+                    <option value="4">Newgioh</option>
+                    <option value="5">Goat Format</option>
+                    <option value="6">Traditional</option>
+                    <option value="7">Unlimited</option>
+                    <option value="8">Mega-Banned</option>
+                    <option value="9">2015.1.1 (TCG)</option>
+                    <option value="10">2015.1.1 (OCG)</option>
                 </select>
                 <br />
 
