Use AI in tag, Select AI format

--- a/server/http/index.html
+++ b/server/http/index.html
@@ -230,6 +230,8 @@
                 <br />
 
                 <h2 data-translation-additionaloptions>Additional Options</h2>
+                <label data-translation-useai>Use AI</label>
+                <input type="checkbox" id="useai">
                 <label data-translation-enableoldrules>Enable Old Rules</label>
                 <input type="checkbox" id="enableprio">
                 <br />
